--- a/client/main/main.less
+++ b/client/main/main.less
@@ -1,4 +1,15 @@
+require('shared/reset.less');
+
+html{
+	background-color: #333;
+}
+
 .Main{
+	width : 100%;
+	max-width : 550px;
+	margin: 0 auto;
+	font-family: 'Lato', sans-serif;
+	color : white;
 
 	.planet{
 
