--- a/client/main/planetList/planetList.less
+++ b/client/main/planetList/planetList.less
@@ -1,18 +1,37 @@
 
 .PlanetList{
+	border-top: 1px solid white;
+
 	.sorting{
 		display : flex;
 		cursor  : pointer;
+		border-bottom: 1px solid white;
 		&>.selected{
 			background-color : red;
 		}
+		.resource, .influence{
+			border-left : 1px solid white;
+		}
 	}
 	.planets{
+		overflow-y: scroll;
+		max-height: 80vh;
 		&.owned{
 			.Planet.unowned{ display : none; }
 		}
 		&.not_owned{
 			.Planet.owned{ display : none; }
 		}
+	}
+
+	.sorting, .planets{
+		.name{
+			flex-grow : 1;
+		}
+		.resource, .influence{
+			width : 40px;
+			text-align : center;
+		}
+
 	}
 }
