--- a/client/main/summary/summary.less
+++ b/client/main/summary/summary.less
@@ -1,3 +1,22 @@
-.Summary{
 
+.Summary{
+	display : flex;
+	.resource, .influence{
+		position   : relative;
+		text-align : center;
+		flex-grow  : 1;
+		padding : 1em 0em;
+		i{
+			position  : absolute;
+			top       : 50%;
+			left      : 50%;
+			opacity   : 0.3;
+			font-size : 3em;
+			transform : translate(-50%, -50%);
+		}
+		small{
+			&:before{ content : '(' }
+			&:after{ content : ')' }
+		}
+	}
 }
