--- a/client/main/controls/controls.less
+++ b/client/main/controls/controls.less
@@ -1,18 +1,20 @@
 
 .Controls{
 	display       : flex;
-	border-bottom : 1px solid white;
+	border-bottom : 1px solid @grey;
+	font-size: 1.2em;
 	.btn{
 		vertical-align : middle;
-		height         : 30px;
+		padding : 0.8em 0em;
+
 		cursor         : pointer;
 		text-align     : center;
 		flex-grow      : 1;
 		&:hover{
-			background-color : #555;
+			background-color : fade(@teal, 40%);
 		}
 		&+.btn{
-			border-left : 1px solid white;
+			border-left : 1px solid @grey;
 		}
 	}
 }
