--- a/client/main/planetList/planetList.less
+++ b/client/main/planetList/planetList.less
@@ -1,15 +1,23 @@
 
 .PlanetList{
-	border-top : 1px solid white;
+	border-top : 1px solid @grey;
 	.sorting{
 		display       : flex;
 		cursor        : pointer;
-		border-bottom : 1px solid white;
+		border-bottom : 1px solid @grey;
+		font-size : 0.8em;
+		&>*{
+			padding : 0.8em 0em;
+		}
 		&>.selected{
-			background-color : red;
+			background-color : fade(@teal, 50%) ;
 		}
 		.resource, .influence{
-			border-left : 1px solid white;
+			border-left : 1px solid @grey;
+		}
+		.name{
+			padding-left: 3em;
+			text-transform: uppercase;
 		}
 	}
 	.planets{
@@ -27,7 +35,7 @@
 			flex-grow : 1;
 		}
 		.resource, .influence{
-			width      : 40px;
+			width      : 50px;
 			text-align : center;
 		}
 	}
